--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    my name is ishant 
+    my name is ishant and this is open source 
     
 </body>
 </html>
